tooling/nargo_cli/tests/snapshots/execution_failure/dynamic_index_zero_sized_member_write_failure/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds, array has size 4, but index was 10
  ┌─ src/main.nr:9:5
  │
9 │     arr[i].a = [];
  │     ------
  │
  = Call stack:
    1: main
            at src/main.nr:9:5

Failed assertion
