tooling/nargo_cli/tests/snapshots/execution_failure/dynamic_index_zero_sized_member_write_failure/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Index out of bounds: 10 is out of bounds for the array of length 4
  ┌─ src/main.nr:9:5
  │
9 │     arr[i].a = [];
  │     ------
  │

Error interpreting main function
